[package]
name = "crumb"
version = "0.1.2"
edition = "2021"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
debug = false

[dependencies]
assert_cmd = "2.0.16"
clap = { version = "4.5.17", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.11.0"
tempfile = "3.13.0"
thiserror = "1.0.63"
